data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1646.wast
;; 7. **Test 7: Incorrectly Indexed br_if within Nested Block**    - **Description:** Introduce an intentional off-by-one error in the label reference within a nested block to see if the implementation can catch and handle the error gracefully.    - **Constraint Checked:** Ensuring proper index bounds validation for label references.    - **Mismanagement Relation:** Error handling and proper nested label resolutions.

(assert_invalid
  (module (func $incorrect-index-br-if
    (block (loop (block (br_if 2 (i32.const 1))))) (i32.const 0)
  ))
  "unknown label"
)